# minima

./: .nvimrc  README-ko.md  README.md  dev.sh  dprint.json  lefthook.yml  package-lock.json  package.json
core/: .dockerignore  .gitignore  .nvimrc  Dockerfile  Dockerfile.search  LICENSE  README-ko.md  README.md  conftest.py  dev.py  docker-compose.yml  env.example  manage.py  pyproject.toml  storage-policy.json
core/.github/workflows/: ci.yml
core/apps/account/: admin.py  apps.py  models.py
core/apps/assignment/: admin.py  apps.py  documents.py  models.py  tasks.py  trigger.py
core/apps/assistant/: admin.py  apps.py  models.py  trigger.py
core/apps/common/: admin.py  apps.py  error.py  factory.py  models.py  policy.py  schema.py  search.py  storage.py  translation.py  util.py
core/apps/competency/: admin.py  apps.py  certificate.py  models.py  views.py
core/apps/content/: admin.py  apps.py  documents.py  models.py
core/apps/course/: admin.py  apps.py  models.py  tasks.py  trigger.py
core/apps/course/api/: v1.py  (+1 more)
core/apps/desk/: apps.py
core/apps/discussion/: admin.py  apps.py  models.py  tasks.py  trigger.py
core/apps/exam/: admin.py  apps.py  documents.py  models.py  tasks.py  trigger.py
core/apps/learning/: admin.py  apps.py  models.py  tasks.py  trigger.py
core/apps/operation/: admin.py  apps.py  fcm.py  import_export.py  models.py  trigger.py
core/apps/partner/: admin.py  apps.py  import_export.py  models.py
core/apps/preview/: admin.py  apps.py  models.py  tasks.py
core/apps/quiz/: admin.py  apps.py  documents.py  models.py  trigger.py
core/apps/sso/: admin.py  apps.py  models.py
core/apps/store/: admin.py  apps.py  models.py
core/apps/studio/: admin.py  apps.py  decorator.py  models.py  tasks.py
core/apps/survey/: admin.py  apps.py  documents.py  models.py
core/apps/tracking/: admin.py  apps.py  middleware.py  models.py  tasks.py
core/apps/tutor/: admin.py  apps.py  decorator.py  models.py  tasks.py
core/apps/warehouse/: admin.py  apps.py  models.py  tasks.py  views.py
core/minima/: api.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/wheels/: README.md  ua_parser-1.0.1-py3-none-any.whl  ua_parser_builtins-202601-py3-none-any.whl  ua_parser_builtins-202602-py3-none-any.whl
(+749 files in other folders)
